src/objects/ADvendio__ValueAdPriceAssignment__c.object
<CustomObject>
    <description>Enables Value to AdPrice n-n connections</description>
    <fields>
        <fullName>ADvendio__AdPrice__c</fullName>
        <description>Connection to AdPrice-Object</description>
        <inlineHelpText>Link an Ad Price</inlineHelpText>
        <label>Ad Price</label>
        <referenceTo>ADvendio__Ad_price__c</referenceTo>
        <relationshipLabel>Value AdPrice Assignments</relationshipLabel>
        <relationshipName>ValueAdPriceAssignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__UniqueKey__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Unique identifier for the record</description>
        <externalId>true</externalId>
        <label>Unique Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ADvendio__Value__c</fullName>
        <description>Connection to Value-Object</description>
        <inlineHelpText>Link a Value</inlineHelpText>
        <label>Value</label>
        <referenceTo>ADvendio__Value__c</referenceTo>
        <relationshipLabel>Value AdPrice Assignments</relationshipLabel>
        <relationshipName>ValueAdPriceAssignments</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Value AdPrice Assignment</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <columns>NAME</columns>
        <columns>ADvendio__Value__c</columns>
        <columns>ADvendio__AdPrice__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>VAP-{00000000}</displayFormat>
        <label>Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Value AdPrice Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>